responsive on mobile fix text and display none to multi-language

--- a/src/index.css
+++ b/src/index.css
@@ -159,4 +159,7 @@ button:focus-visible {
   .right-container .multi-language-container {
     display: none;
   }
+  .project {
+    width: 300px;
+  }
 }
